#9038 Complete shim and interop functionality.